# mandelbrot-set

./: .clang-format  .gitignore  CMakeLists.txt  README.md  create_gif.sh
include/: colors.h  event_handler.hpp  font_data.h  mandelbrot.hpp  renderer.hpp
src/: event_handler.cpp  main.cpp  mandelbrot.cpp  renderer.cpp
